fix: FM-692 Tap Interaction Not Registering for Top Stone When Multiple Stones Overlap & position issue in Web version. (#1819)
* fix: [FTM-689] Added DeltaTime for Treasure Stones Animation. This fix is needed since different device has different refresh rate.

* refactor: put deltaTime / 16.67 to its own variable

* fix: FM-692 Tap Interaction Not Registering for Top Stone When Multiple Stones Overlap & position issue in Web version.

---------

--- a/public/index.css
+++ b/public/index.css
@@ -80,6 +80,8 @@ img {
 
 #treasurecanvas{
   display: none;
+  width: 100%;
+  height: 100%;
 }
 
 #canvas {
